syntax = "proto3";

package orders;
option go_package = "./;order_pb";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Orders {
    rpc AcceptFromCourier(OrderInput) returns (google.protobuf.Empty) {}
    rpc Remove(IdRequest) returns (google.protobuf.Empty) {}
    rpc Give(Ids) returns (google.protobuf.Empty) {}
    rpc List(ListRequest) returns (OrderList) {}
    rpc Return(ReturnRequest) returns (google.protobuf.Empty) {}
    rpc ListReturn(ListReturnRequest) returns (OrderList) {}
}

message ListRequest {
    int64 recipient = 1;
    int64 n = 2;
    bool onlyNotGivenOrders = 3;
}

message ListReturnRequest {
    int64 pageNum = 1;
    int64 ordersPerPage = 2;
}

message ReturnRequest {
    int64 id = 1;
    int64 recipient = 2;
}

message OrderList {
    repeated Order orders = 1;
}

message Order {
    int64 id = 1;
    int64 recipientId = 2;
    int64 weightGrams = 3;
    int64 priceKopecks = 4;
    string cover = 5;
    google.protobuf.Timestamp expireDate = 6;
}

message Ids {
    repeated int64 ids = 1;
}

message IdRequest {
    int64 id = 1;
}

message OrderInput {
    int64 id = 1;
    int64 recipientId = 2;
    int64 weightGrams = 3;
    int64 priceKopecks = 4;
    string cover = 5;
    string expireDate = 6;
}